--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 PORT=3001
 DATABASE_URL=mongodb+srv://juisch20220011252:ozZrSOdX9QcTayGu@cluster0.4zfan.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+JWT=Saibaba9857
